--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "apexcharts": "^4.1.0",
+    "axios": "^1.7.9",
+    "heroicons": "^2.2.0",
+    "jsvectormap": "^1.6.0",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "sweetalert2": "^11.14.5"
   },
   "devDependencies": {
     "eslint": "^8",
