--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "jsvectormap": "^1.6.0",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
+    "react-datepicker": "^7.5.0",
+    "react-datetime": "^3.2.0",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "sweetalert2": "^11.14.5"
   },
